                  Use these new methods of 'CremeTestCase' instead: assertFormfieldError() & assertValidationError().
                  Then stop using the base class 'FieldTestCase' & 'FieldTestCaseMixin'.
                - The class 'views.ViewsTestCase' is deprecated ;
                  use the new method 'CremeTestCase.add_credentials()' instead.
            - Apps :
                * Persons :
                    - The form class 'forms.contact.ContactNamesForm' is now deprecated.
                    - The class-view 'views.contact.ContactNamesEdition' is now deprecated.
        # A new setting value "POPULATORS" has been added ; it allows to
          override the classes used by the command "creme_populate".
          Many classes 'Populate' have been reworked to facilitate their modification by inheritance ;
          the work has been split into several methods, and class attributes with declarative values have been added.
        # In 'creme_core.models' :
            - A class attribute 'CremeEntity._DELETABLE_INTERNAL_RTYPE_IDS' has been added to avoid writing
              methods '_pre_delete()' to manage the internal Relationships.
            - The class 'UserRole' has 2 new fields: uuid & extra_data (a JSONField which can be used to store whatever you want).
        # In 'creme_core.views' :
            - The views which manage Bricks now display a minimal Brick (see 'creme_core.gui.bricks.ForbiddenBrick')
              which contains an error message when the attribute 'Brick.permissions' does not pass the validation.
              This attribute has been set for many Brick classes in order to use this new behaviour.
            - The class-view 'views.entity.EntityDeletion' now accepts explicit callback URL.
        # In the class 'creme_core.core.setting_key.SettingKey', you can now pass :
             - a custom form-field class.
             - a custom renderer function.
        # In 'creme_core.gui' :