@@ -1,6 +1,6 @@
 /*******************************************************************************
     Creme is a free/open-source Customer Relationship Management software
-    Copyright (C) 2017-2022  Hybird
+    Copyright (C) 2017-2024  Hybird
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as published by
@@ -205,7 +205,7 @@
                 }
 
                 // Trigger events for some XSS issues
-                $('[data-test="qunitXSS"]').mouseover().trigger('click');
+                $('[data-test="qunitXSS"]').trigger('mouseover').trigger('click');
             }.bind(this));
         },
 
