@@ -1,6 +1,6 @@
 /*******************************************************************************
  Creme is a free/open-source Customer Relationship Management software
- Copyright (C) 2015-2022  Hybird
+ Copyright (C) 2015-2024  Hybird
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU Affero General Public License as published by
@@ -116,7 +116,7 @@ creme.list.Pager = creme.component.Component.sub({
                      self._goToChosenPage(input);
                  } else if (e.keyCode === 27) {
                      e.preventDefault();
-                     input.focusout();
+                     input.trigger('focusout');
                  }
               })
              .on('blur focusout', function() {
