@@ -99,6 +99,12 @@
                   Then stop using the base class 'FieldTestCase' & 'FieldTestCaseMixin'.
                 - The class 'views.ViewsTestCase' is deprecated ;
                   use the new method 'CremeTestCase.add_credentials()' instead.
+            - Javascript :
+                * jQuery 3.x :
+                    - '$.mouseover()' is deprecated; use '$.trigger("mouseover")' instead.
+                    - '$.mouseenter()' is deprecated; use '$.trigger("mouseenter")' instead.
+                    - '$.mouseleave()' is deprecated; use '$.trigger("mouseleave")' instead.
+                    - '$.focusout()' is deprecated; use '$.trigger("focusout")' instead.
             - Apps :
                 * Persons :
                     - The form class 'forms.contact.ContactNamesForm' is now deprecated.
@@ -187,7 +193,7 @@
                 - The 'USE_JQPLOT' flag is no longer useful.
                 - The widgets 'ui-creme-jqueryplot' & 'ui-creme-plotselector' have been removed.
                 - The widget 'ui-creme-scrollactivator' has been removed : only used with jqplot to optimize rendering on oldest browsers.
-            - In Javascript:
+            - In Javascript :
                 * The component 'creme.form.Chosen' and its dependencies have been removed.
                 * jQuery 3.x :
                     - Do not rely on $.ajaxSettings.traditional (deprecated since jQuery 1.9+) :
